integration_test/shared/manifests/portal-frontend/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: portal-frontend
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        backend:
          serviceName: portal-frontend
          servicePort: http
      - path: /api/login(/|$)(.*)
        backend:
          serviceName: finance-portal
          servicePort: 3000
      - path: /api/settlement(/|$)(.*)
        backend:
          serviceName: centralsettlement-service
          servicePort: 80
      - path: /api/portal-backend(/|$)(.*)
        backend:
          serviceName: finance-portal
          servicePort: 3000
